--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 
 :root{
     --primary-color: #fb7185;
+
 }
 
 body{
@@ -53,4 +54,29 @@ hr{
 .list-item-inline{
     display: inline;
     padding: 0rem 0.5rem;
+}
+
+/* navigation */
+
+.navigation {
+    background-color: var(--primary-color);
+    color : white;
+    padding: 1rem;
+    border-bottom-left-radius: 1rem;
+}
+
+.navigation .nav-brand{
+    font-weight:bold;
+}
+
+.navigation .nav-pills{
+    text-align: left;
+}
+
+.navigation .link{
+    color : white;
+}
+
+.navigation .link-active{
+    font-weight: bold;
 }
