--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ hero .hero-img{
 }
 
 .hero .hero-heading{
+    text-align: center;
     padding-top: 1rem;
     color: var(--dark-gray);
 }
@@ -114,3 +115,20 @@ hero .hero-img{
     background-color: var(--off-white);
 }
 
+/* footer */
+
+.footer{
+    background-color: var(--primary-color);
+    padding: 2rem 0rem;
+    text-align: center;
+    color: white;
+    border-top-right-radius: 1rem ;
+}
+
+.footer .link{
+    color: white;
+}
+
+.footer .ul{
+    padding-inline-start: 0px;
+}
